[package]
name = "borker-rs"
version = "0.2.0"
authors = ["Aiden McClelland <gagglehoof@gmail.com>"]
edition = "2018"

[dependencies]
base58 = "0.1.0"
bigdecimal = { version = "0.0.15", features = ["serde"] }
bitcoin = "0.17.1"
bitcoin_hashes = "0.3.0"
chrono = { version = "0.4.6", features = ["serde"] }
failure = "0.1.3"
hex = "0.3.2"
hmac = "0.7.0"
libsecp256k1 = "0.2.1"
pbkdf2 = { version = "0.3.0", default-features = false }
rand = { version = "0.6", features = ["wasm-bindgen"] }
ripemd160 = "0.8.0"
serde = { version = "1.0.80", features = ["derive"] }
serde_bytes = "0.10.4"
serde_cbor = "0.9.0"
sha2 = "0.8.0"

[workspace]
members = ["js/bindings", "cli"]
