[package]
name = "borker_cli"
version = "0.2.0"
authors = ["Aiden McClelland <gagglehoof@gmail.com>", "Sam Sartor <me@samsartor.com>"]
edition = "2018"

[dependencies]
borker-rs = { path = ".." }
structopt = "0.2"
dirs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
