[package]
name = "borker-js-bindings"
version = "0.2.0"
authors = ["Sam Sartor <me@samsartor.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[profile.release]
debug = true
lto = true

[dependencies]
borker-rs = { path = "../.." }
wasm-bindgen = { version = "0.2.45", features = ["serde-serialize", "nightly"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.4", optional = true }
